--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -201,8 +201,8 @@
                     android:layout_height="match_parent"
                     android:layout_weight="3" />
 
-                <RadioButton
-                    android:id="@+id/radioButton"
+                <CheckBox
+                    android:id="@+id/autologin"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
