--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#A73A3C</color>
     <color name="colorMain">#FFFFFF</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#000000</color>
     <color name="colorSejongRED">#A73A3C</color>
     <color name="colorTestRed">#D9ADAF</color>
     <!-- color high light-->
