--- a/app/src/main/res/drawable/ripple_effect_all.xml
+++ b/app/src/main/res/drawable/ripple_effect_all.xml
@@ -8,6 +8,7 @@
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
             <solid android:color="#FFFFFF" /> <!-- background color -->
+            <corners android:radius="7dp"/>
         </shape>
     </item>
 </ripple>
