--- a/app/src/main/res/drawable/ripple_effect_categorybook1.xml
+++ b/app/src/main/res/drawable/ripple_effect_categorybook1.xml
@@ -7,10 +7,10 @@
     tools:targetApi="lollipop"> <!-- ripple effect color -->
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" /> <!-- background color -->
+            <solid android:color="@color/color_cat_1" /> <!-- background color -->
             <corners
-                android:bottomLeftRadius="7dp"
-                android:bottomRightRadius="7dp"
+                android:bottomLeftRadius="14dp"
+                android:bottomRightRadius="14dp"
                 />
         </shape>
     </item>
