--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -114,7 +114,7 @@
                 android:autoSizeTextType="uniform"
                 android:fontFamily="@font/namum"
                 android:gravity="center|start"
-                android:text="로그인"
+                android:text="@string/login"
                 android:textColor="@android:color/background_light" />
 
             <TextView
@@ -185,7 +185,7 @@
                 android:fontFamily="@font/namum"
                 android:paddingTop="7dp"
                 android:paddingBottom="7dp"
-                android:text="로그인"
+                android:text="@string/login"
                 android:textColor="@android:color/background_light" />
 
             <LinearLayout
@@ -208,7 +208,7 @@
                     android:layout_weight="1"
                     android:autoSizeTextType="uniform"
                     android:fontFamily="@font/namum"
-                    android:text="자동로그인" />
+                    android:text="@string/auto_login" />
 
             </LinearLayout>
 
