--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center|left"
             android:layout_weight="1"
-            android:paddingStart="28dp"
+            android:paddingStart="30dp"
             android:text="@string/user_hello"
             android:textColor="#000000"
             android:textSize="20sp" />
@@ -26,10 +26,12 @@
         <ImageView
             android:id="@+id/img_user"
             android:layout_width="0dp"
-            android:layout_height="100dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
+            android:layout_marginEnd="0dp"
             android:layout_weight="1"
-            android:padding="0dp"
+            android:paddingEnd="30dp"
+            android:scaleType="fitEnd"
             app:srcCompat="@drawable/ic_user" />
     </LinearLayout>
 
@@ -46,7 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -120,14 +123,21 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView1"
+            android:elevation="5dp"
+            android:clickable="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#FFFFFF" />
+            android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/ripple_effect_all" />
 
         <View
             android:id="@+id/view5"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="0" />
 
     </LinearLayout>
 </LinearLayout>
