--- a/app/src/main/res/layout/recycle_thisweektest.xml
+++ b/app/src/main/res/layout/recycle_thisweektest.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:padding="8dp"
     android:gravity="center_vertical"
-    android:background="@color/colorMain"
+    android:clickable="true"
+    android:background="@drawable/ripple_effect_all"
     >
 
 
@@ -14,9 +15,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|start"
+        android:layout_marginStart="20dp"
         android:layout_weight="2"
         android:gravity="center|start"
         android:text="@string/home_text_test_date"
+        android:textColor="#000000"
         android:textSize="16sp" />
 
     <TextView
@@ -24,9 +27,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|end"
+        android:layout_marginEnd="20dp"
         android:layout_weight="2"
         android:gravity="center|end"
         android:text="@string/home_text_test_info"
+        android:textColor="#000000"
         android:textSize="16sp" />
 
     <ImageView
