--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -9,6 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_weight="1"
         android:orientation="horizontal">
 
@@ -39,7 +41,10 @@
         android:id="@+id/button_staus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="5dp"
         android:layout_weight="1.3"
         android:background="@drawable/ripple_effect_login"
         android:text="고전독서인증" />
@@ -47,6 +52,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:layout_weight="1"
         android:orientation="vertical"
         android:weightSum="2">
@@ -113,6 +120,7 @@
             android:id="@+id/text_thisweektest"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginStart="20dp"
             android:layout_weight="1"
             android:gravity="center|start"
             android:paddingStart="7dp"
@@ -123,14 +131,15 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView1"
-            android:elevation="5dp"
-            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_weight="1"
-            android:background="@drawable/ripple_effect_all" />
+            android:background="@drawable/ripple_effect_all"
+            android:clickable="true"
+            android:elevation="5dp"
+            android:overScrollMode="never" />
 
         <View
             android:id="@+id/view5"
