--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,9 +42,10 @@
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="0.7"
+                android:scaleType="fitCenter"
                 app:srcCompat="@drawable/sejong" />
 
             <LinearLayout
