--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -44,7 +44,7 @@
         android:weightSum="10">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/text_menu3_detail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
