--- a/app/src/main/res/layout/recycle_thisweektest.xml
+++ b/app/src/main/res/layout/recycle_thisweektest.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp"
-    android:gravity="center_vertical"
-    android:clickable="true"
+    android:layout_height="wrap_content"
     android:background="@drawable/ripple_effect_all"
-    >
+    android:clickable="true"
+    android:gravity="center_vertical"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp">
 
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:layout_gravity="center|start"
         android:layout_marginStart="15dp"
         android:layout_weight="2"
