--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:weightSum="4.3">
 
@@ -47,7 +48,7 @@
         android:layout_marginBottom="5dp"
         android:layout_weight="1.3"
         android:background="@drawable/ripple_effect_login"
-        android:text="고전독서인증" />
+        android:text="나중에바꿀거임" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -141,4 +142,5 @@
             android:overScrollMode="never" />
 
     </LinearLayout>
+
 </LinearLayout>
