--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -54,15 +54,21 @@
             android:text="@string/text_select_test_book"
             android:textSize="20sp" />
 
-        <Spinner
-            android:id="@+id/spinner_menu3_1"
+        <TextView
+            android:id="@+id/text_menu2_datepicker"
+            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginStart="50dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="50dp"
             android:layout_marginBottom="40dp"
-            android:background="@drawable/spinner_design" />
+            android:background="@drawable/spinner_design"
+            android:gravity="center_vertical"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="@string/datepick"
+            android:textSize="18sp" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView_testdate"
