--- a/app/src/main/res/layout/activity_menu3_search_library.xml
+++ b/app/src/main/res/layout/activity_menu3_search_library.xml
@@ -3,12 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="10">
+    android:weightSum="9.4">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.3"
+        android:background="#ffffff"
         android:orientation="vertical">
 
         <TextView
@@ -16,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:paddingStart="50dp"
+            android:paddingStart="30dp"
             android:paddingEnd="0dp"
             android:text="@string/text_library"
             android:textColor="#000000"
@@ -27,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:paddingStart="50dp"
+            android:paddingStart="30dp"
             android:paddingEnd="0dp"
             android:text="@string/text_search_book_name"
             android:textColor="#000000"
@@ -39,17 +40,25 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="center_vertical"
-            android:paddingStart="50dp"
-            android:paddingEnd="50dp"
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
             android:text="@string/text_search_book_result"
             android:textSize="20sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:layout_weight="9"
+        android:background="#ffffff"
         android:orientation="vertical"
         android:weightSum="10">
 
