--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="10">
+    android:weightSum="9.4">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.3"
+        android:background="#ffffff"
         android:orientation="vertical">
 
         <TextView
@@ -17,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:paddingStart="50dp"
+            android:paddingStart="30dp"
             android:paddingEnd="0dp"
             android:text="@string/text_classic"
             android:textColor="#000000"
@@ -28,18 +29,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:paddingStart="50dp"
+            android:paddingStart="30dp"
             android:paddingEnd="0dp"
             android:text="@string/text_reserv_test"
             android:textColor="#000000"
             android:textSize="36sp" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:visibility="invisible" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:layout_weight="9"
+        android:background="#ffffff"
         android:orientation="vertical"
         android:weightSum="10">
 
@@ -56,14 +65,14 @@
 
         <TextView
             android:id="@+id/text_menu2_datepicker"
-            android:clickable="true"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="40dp"
             android:background="@drawable/spinner_design"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
@@ -74,8 +83,8 @@
             android:id="@+id/recyclerView_testdate"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginEnd="0dp"
             android:background="@drawable/ripple_effect_all"
             android:clickable="true" />
 
