--- a/app/src/main/res/layout/fragment_3.xml
+++ b/app/src/main/res/layout/fragment_3.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="10">
+    android:weightSum="9.4">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="0.3"
+        android:background="#ffffff"
         android:orientation="vertical">
 
         <TextView
@@ -17,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:paddingStart="50dp"
+            android:paddingStart="30dp"
             android:paddingEnd="0dp"
             android:text="@string/text_library"
             android:textColor="#000000"
@@ -28,18 +29,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:paddingStart="50dp"
+            android:paddingStart="30dp"
             android:paddingEnd="0dp"
             android:text="@string/text_library_search"
             android:textColor="#000000"
             android:textSize="36sp" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:visibility="invisible" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="bottom"
-        android:layout_weight="8.5"
+        android:layout_weight="9"
+        android:background="#ffffff"
         android:orientation="vertical"
         android:weightSum="10">
 
@@ -48,28 +57,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:paddingStart="50dp"
+            android:paddingStart="30dp"
             android:paddingEnd="0dp"
             android:text="@string/text_select_book1"
             android:textSize="20sp" />
 
         <Spinner
             android:id="@+id/spinner_menu3_1"
-            android:background="@drawable/spinner_design"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
-            android:layout_marginEnd="50dp" />
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/spinner_design" />
 
         <Spinner
             android:id="@+id/spinner_menu3_2"
-            android:background="@drawable/spinner_design"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
-            android:layout_marginEnd="50dp" />
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/spinner_design" />
 
         <View
             android:id="@+id/view"
