--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="login_button_ripple">#963A3C</color>
     <color name="all_button_ripple">#737373</color>
     <color name="test_button_ripple">#A73A3C</color>
+    <color name="gray">#878787</color>
     <!-- color category-->
     <color name="color_cat_1">#CC87F8</color>
     <color name="color_cat_2">#F5D648</color>
