--- a/app/src/main/res/layout/activity_menu1_testinfo.xml
+++ b/app/src/main/res/layout/activity_menu1_testinfo.xml
@@ -61,7 +61,7 @@
                 android:background="@drawable/ripple_effect_login"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
-                android:text="예약취소"
+                android:text="@string/cancel_test"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp" />
 
@@ -122,7 +122,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:gravity="right|center_vertical"
-                android:text="TextView"
+                android:text="@string/blabla"
                 android:textColor="#000000"
                 android:textSize="20sp" />
         </LinearLayout>
@@ -153,7 +153,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:gravity="right|center_vertical"
-                android:text="TextView"
+                android:text="@string/blabla"
                 android:textColor="#000000"
                 android:textSize="20sp" />
         </LinearLayout>
@@ -184,7 +184,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:gravity="right|center_vertical"
-                android:text="TextView"
+                android:text="@string/blabla"
                 android:textColor="#000000"
                 android:textSize="20sp" />
         </LinearLayout>
@@ -208,7 +208,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:gravity="center"
-            android:text="현재 설정된 알림이 없습니다."
+            android:text="@string/noalarm"
             android:textColor="#000000"
             android:textSize="24sp" />
 
