--- a/app/src/main/res/layout/activity_menu2_test_book_choose.xml
+++ b/app/src/main/res/layout/activity_menu2_test_book_choose.xml
@@ -94,7 +94,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|end"
-                android:text="TextView"
+                android:text="@string/blabla"
                 android:textColor="#000000"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -126,7 +126,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|end"
-                android:text="TextView"
+                android:text="@string/blabla"
                 android:textColor="#000000"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -158,7 +158,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|end"
-                android:text="TextView"
+                android:text="@string/blabla"
                 android:textColor="#000000"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -190,7 +190,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|end"
-                android:text="TextView"
+                android:text="@string/blabla"
                 android:textColor="#000000"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -222,7 +222,7 @@
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical|end"
-                android:text="TextView"
+                android:text="@string/blabla"
                 android:textColor="#000000"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -275,7 +275,7 @@
             android:layout_marginBottom="0dp"
             android:background="@drawable/ripple_effect_gray"
             android:gravity="center"
-            android:text="신청"
+            android:text="@string/apply"
             android:textColor="#ffffff"
             android:textSize="20sp" />
 
