--- a/app/src/main/res/layout/fragment_4.xml
+++ b/app/src/main/res/layout/fragment_4.xml
@@ -21,7 +21,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="name님의 프로필"
+            android:text="@string/profile"
             android:textColor="#000000"
             android:textSize="18sp" />
 
