[추가,수정]/최종build1.0
-alertdialog,progressdialog 라이브러리 교체
-라이브러리 교체에 따른 관련 코드 수정
-로그아웃시 알림정보삭제 안내고지
-알림설정관련 오류수정

--- a/app/src/main/res/layout/activity_menu1_testinfo.xml
+++ b/app/src/main/res/layout/activity_menu1_testinfo.xml
@@ -206,12 +206,29 @@
             android:id="@+id/text_alarmlist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
+            android:clickable="false"
             android:gravity="center"
-            android:clickable="true"
             android:text="@string/noalarm"
             android:textColor="#000000"
             android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/text_alarmlist2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="30dp"
+            android:clickable="true"
+            android:drawableRight="@drawable/ic_clear"
+            android:gravity="center"
+            android:text=""
+
+            android:textColor="#000000"
+            android:textSize="22sp" />
 
     </LinearLayout>
 </LinearLayout>
